# PolyParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  main.cpp  test_converter.py
cmakelinux/: CMakeLists.txt
cmakewin/: CMakeLists.txt
inc/: fifo_map.hpp  json.hpp
